--- a/src/app/inbox/inbox-home/inbox-home.component.html
+++ b/src/app/inbox/inbox-home/inbox-home.component.html
@@ -1,5 +1,7 @@
 <mat-grid-list cols="4" rowHeight="100px">
-  <mat-grid-tile colspan="1" rowspan="2">1</mat-grid-tile>
+  <mat-grid-tile colspan="1" rowspan="2">
+    <button mat-button (click)="openDialog()" style="color: black; background-color: aqua;">Open dialog</button>
+  </mat-grid-tile>
 
 
 
